Fix text overflow in project cards

--- a/src/sections/projects/Projects.module.css
+++ b/src/sections/projects/Projects.module.css
@@ -22,8 +22,10 @@
 .projectCard {
   border: 1px solid #3b3440;
   border-radius: 10px;
-  padding: 20px ;
+  padding: 20px;
   background-color: #000000;
+  height: auto;
+  width: 200px;
 }
 
 .projectImage {
@@ -36,4 +38,10 @@
   border-top: 1px solid #3b3440;
   border-bottom: 1px solid #3b3440;
   padding: 0 60px;
+}
+
+.text {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
